# transcript

./: .gitignore  05-上下影线蜡烛好还是威廉好.srt  IMPLEMENTATION_SUMMARY.md  README.md  WHISPER_CPP_INTEGRATION.md  academy-intro.srt  demo.py  dict.yaml  download_models.py  example_vad_usage.py  pyproject.toml  run.py  simple_test.py  test_alignment.py  test_basic.py  test_fix.py  test_silero_vad.py  test_vad.py  tmp.srt  transcript.py  words.md
docs/: AUDIO_SUPPORT_SUMMARY.md  BUGFIX_SUMMARY.md  BUG_FIXES.md  CLI_GUIDE.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_MIGRATION_SUMMARY.md  FINAL_SUMMARY.md  README.md  README_ALIGNMENT.md  SUBTITLE_OPTIMIZATION_SUMMARY.md  USAGE_EXAMPLES.md  setup_models.sh
tests/: test_alignment.py  test_audio_support.py  test_basic.py  test_fixes.py  test_model_loading.py
transcript/: __init__.py  cli.py  demo.py  gzh.py  timestamp_alignment.py  transcript.py
