[project]
name = "transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "Flora-cj",email = "1625864556@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire (>=0.7.0,<0.8.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "opencc (>=1.1.9,<2.0.0)",
    "pysubs2 (>=1.8.0,<2.0.0)",
    "whisperx (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
